--- a/sponsors.html
+++ b/sponsors.html
@@ -26,113 +26,56 @@
   <script src="js/modernizr-3.5.0.min.js"></script>
 </head>
 
-<body class="single">
-  <!-- <div class="container-fluid">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-3 fh5co_padding_menu">
+<body>
+  <div class="single">
+    <div class="container-fluid fh5co_padd_mediya padding_786">
+      <div class="container padding_786">
+        <nav class="navbar navbar-toggleable-md navbar-light ">
+          <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa fa-bars"></span>
+          </button>
           <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
-        </div>
-        <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-search"></i>
-              </div>
-            </a>
+          <a class="navbar-brand" href="#">
+            <img src="images/wsoe-logo.png" alt="img" class="mobile_logo_width" />
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item ">
+                <a class="nav-link" href="index.html">Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="news.html">Blog
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="events.html">Events
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="videos.html">Latest Videos
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="search.html">
+                  <i class="fa fa-search"></i>
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+            </ul>
           </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-linkedin"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-google-plus"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-twitter"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-facebook"></i>
-              </div>
-            </a>
-          </div>
-          <div class="clearfix"></div>
-        </div>
+        </nav>
       </div>
     </div>
-  </div> -->
-  <div class="container-fluid fh5co_padd_mediya padding_786">
-    <div class="container padding_786">
-      <nav class="navbar navbar-toggleable-md navbar-light ">
-        <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="fa fa-bars"></span>
-        </button>
-        <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
-        <a class="navbar-brand" href="#">
-          <img src="images/wsoe-logo.png" alt="img" class="mobile_logo_width" />
-        </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="news.html">Blog
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="events.html">Events
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="videos.html">Latest Videos
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="search.html">
-                <i class="fa fa-search"></i>
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <!-- <li class="nav-item ">
-                  <a class="nav-link" href="compete.html">Compete
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
-            <!-- <li class="nav-item ">
-                  <a class="nav-link" href="contact.html">Contact
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
-          </ul>
-        </div>
-      </nav>
-    </div>
-  </div>
 
-  <div class="container padding">
-    <div class="container-fluid mb-4">
-      <div class="container">
-        <div class="row" style="padding-top: 60px">
+    <div class="container">
+      <div class="row animate-box">
+        <div class="col-md-8 col-sm-12 pt-4 pb-4">
           <div class="col-12 col-md-12">
             <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
             <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 1</span>
@@ -172,7 +115,6 @@
     </div>
   </div>
 
-
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
       <div class="row">
@@ -180,13 +122,6 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <!-- <div class="text-center d-inline-block">
-                <a class="fh5co_display_table">
-                  <div class="fh5co_verticle_middle">
-                    <i class="fa fa-search"></i>
-                  </div>
-                </a>
-              </div> -->
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
