--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
-<!--
-	24 News by FreeHTML5.co
-	Twitter: https://twitter.com/fh5co
-	Facebook: https://fb.com/fh5co
-	URL: https://freehtml5.co
--->
 <html lang="en" class="no-js">
 
 <head>
@@ -26,35 +20,100 @@
   <script src="js/modernizr-3.5.0.min.js"></script>
 </head>
 
-<body class="single">
-  <!-- <div class="container-fluid">
+<body>
+  <div class="single">
+    <div class="container-fluid fh5co_padd_mediya padding_786">
+      <div class="container padding_786">
+        <nav class="navbar navbar-toggleable-md navbar-light ">
+          <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa fa-bars"></span>
+          </button>
+          <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
+          <a class="navbar-brand" href="#">
+            <img src="images/wsoe-logo.png" alt="img" class="mobile_logo_width" />
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item ">
+                <a class="nav-link" href="index.html">Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="news.html">Blog
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="events.html">Events
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="videos.html">Latest Videos
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="search.html">
+                  <i class="fa fa-search"></i>
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="container pb-4 pt-4">
+        <div class="row">
+
+          <div class="col-md-8 col-sm-12">
+            <div class="container-fluid mb-4">
+              <div class="container">
+                <div class="col-12 text-center contact_margin_svnit">
+                  <div class="text-center fh5co_heading py-2">Sign Up for more information!</div>
+                </div>
+                <div class="row">
+                  <div class="col-12 col-md-12">
+                    <form class="row" id="fh5co_contact_form">
+                      <div class="col-12 py-3">
+                        <input type="text" class="form-control fh5co_contact_text_box" placeholder="E-mail" />
+                      </div>
+                      <div class="col-12 py-3 text-center">
+                        <a href="#" class="btn contact_btn">Sign Up</a>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-12 pb-4 pt-4">
+            <p>
+              is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat
+              interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
+            </p>
+            <p>Contact
+              <a href="mailto:Richard@espgaming.com"> Richard Blankenship</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-3 fh5co_padding_menu">
-          <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
-        </div>
-        <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-search"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-linkedin"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-google-plus"></i>
-              </div>
-            </a>
-          </div>
+        <div class="col-12 col-md-6 py-4 Reserved">© 2018, All rights reserved.</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6">
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
@@ -69,213 +128,78 @@
               </div>
             </a>
           </div>
-          <div class="clearfix"></div>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-youtube"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-envelope"></i>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-  </div> -->
-  <div class="container-fluid fh5co_padd_mediya padding_786">
-    <div class="container padding_786">
-      <nav class="navbar navbar-toggleable-md navbar-light ">
-        <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="fa fa-bars"></span>
-        </button>
-        <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
-        <a class="navbar-brand" href="#">
-          <img src="images/wsoe-logo.png" alt="img" class="mobile_logo_width" />
-        </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
+
+      <div class="row" style="padding-bottom: 60px">
+        <div class="col-12 col-md-2">
+          <ul class="list-unstyled">
+            <li>
+              <hr class="short">
             </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="news.html">Blog
-                <span class="sr-only">(current)</span>
-              </a>
+            <li>
+              <a href="index.html" class="footer_last_part_menu">Home</a>
             </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="events.html">Events
-                <span class="sr-only">(current)</span>
-              </a>
+            <li>
+              <a href="news.html" class="footer_last_part_menu">Blog</a>
             </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="videos.html">Latest Videos
-                <span class="sr-only">(current)</span>
-              </a>
+            <li>
+              <a href="events.html" class="footer_last_part_menu">Events</a>
             </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="search.html">
-                <i class="fa fa-search"></i>
-                <span class="sr-only">(current)</span>
-              </a>
+            <li>
+              <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
             </li>
-            <!-- <li class="nav-item ">
-                  <a class="nav-link" href="compete.html">Compete
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
-            <!-- <li class="nav-item ">
-                  <a class="nav-link" href="contact.html">Contact
-                    <span class="sr-only">(current)</span>
-                  </a>
-                </li> -->
+            <li>
+              <a href="games.html" class="footer_last_part_menu">Games</a>
+            </li>
+            <li>
+              <a href="teams.html" class="footer_last_part_menu">Teams</a>
+            </li>
+            <li>
+              <a href="players.html" class="footer_last_part_menu">Players</a>
+            </li>
           </ul>
         </div>
-      </nav>
-    </div>
-  </div>
-  <!-- <div class="container-fluid contact_us_bg_img">
-    <div class="container">
-      <div class="row">
-        <a href="#" class="fh5co_con_123">
-          <i class="fa fa-home"></i>
-        </a>
-        <a href="#" class="fh5co_con pt-2"> Sign Up </a>
-      </div>
-    </div>
-  </div> -->
-
-  <div class="container padding">
-    <div class="row">
-
-      <div class="col-md-8 col-sm-12">
-        <div class="container-fluid mb-4">
-          <div class="container">
-            <div class="col-12 text-center contact_margin_svnit ">
-              <div class="text-center fh5co_heading py-2">Sign Up for more information!</div>
-            </div>
-            <div class="row">
-              <div class="col-12 col-md-12">
-                <form class="row" id="fh5co_contact_form">
-                  <div class="col-12 py-3">
-                    <input type="text" class="form-control fh5co_contact_text_box" placeholder="E-mail" />
-                  </div>
-                  <div class="col-12 py-3 text-center">
-                    <a href="#" class="btn contact_btn">Sign Up</a>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
+        <div class="col-12 col-md-2">
+          <ul class="list-unstyled">
+            <li>
+              <hr class="short">
+            </li>
+            <li>
+              <a href="about.html" class="footer_last_part_menu">About</a>
+            </li>
+            <li>
+              <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms</a>
+            </li>
+            <li>
+              <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+            </li>
+          </ul>
         </div>
       </div>
-
-      <div class="col-md-4 col-sm-12" style="margin-top: 35px;">
-        <p>
-          is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat
-          interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
-        </p>
-        <p>Contact
-          <a href="mailto:Richard@espgaming.com"> Richard Blankenship</a>
-        </p>
-      </div>
-
     </div>
   </div>
 
-  <div class="container-fluid fh5co_footer_right_reserved">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-6 py-4 Reserved">© 2018, All rights reserved.</div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-6">
-            <!-- <div class="text-center d-inline-block">
-                <a class="fh5co_display_table">
-                  <div class="fh5co_verticle_middle">
-                    <i class="fa fa-search"></i>
-                  </div>
-                </a>
-              </div> -->
-            <div class="text-center d-inline-block">
-              <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-twitter"></i>
-                </div>
-              </a>
-            </div>
-            <div class="text-center d-inline-block">
-              <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-facebook"></i>
-                </div>
-              </a>
-            </div>
-            <div class="text-center d-inline-block">
-              <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-youtube"></i>
-                </div>
-              </a>
-            </div>
-            <div class="text-center d-inline-block">
-              <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-                <div class="fh5co_verticle_middle">
-                  <i class="fa fa-envelope"></i>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-  
-        <div class="row" style="padding-bottom: 60px">
-          <div class="col-12 col-md-2">
-            <ul class="list-unstyled">
-              <li>
-                <hr class="short">
-              </li>
-              <li>
-                <a href="index.html" class="footer_last_part_menu">Home</a>
-              </li>
-              <li>
-                <a href="news.html" class="footer_last_part_menu">Blog</a>
-              </li>
-              <li>
-                <a href="events.html" class="footer_last_part_menu">Events</a>
-              </li>
-              <li>
-                <a href="videos.html" class="footer_last_part_menu">Latest Videos</a>
-              </li>
-              <li>
-                <a href="games.html" class="footer_last_part_menu">Games</a>
-              </li>
-              <li>
-                <a href="teams.html" class="footer_last_part_menu">Teams</a>
-              </li>
-              <li>
-                <a href="players.html" class="footer_last_part_menu">Players</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-12 col-md-2">
-            <ul class="list-unstyled">
-              <li>
-                <hr class="short">
-              </li>
-              <li>
-                <a href="about.html" class="footer_last_part_menu">About</a>
-              </li>
-              <li>
-                <a href="contact.html" class="footer_last_part_menu">Contact</a>
-              </li>
-              <li>
-                <a href="terms.html" class="footer_last_part_menu">Terms</a>
-              </li>
-              <li>
-                <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
-              </li>
-              <li>
-                <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
 
   <div class="gototop js-top">
     <a href="#" class="js-gotop">
