--- a/news.html
+++ b/news.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
-<!--
-	24 News by FreeHTML5.co
-	Twitter: https://twitter.com/fh5co
-	Facebook: https://fb.com/fh5co
-	URL: https://freehtml5.co
--->
 <html lang="en" class="no-js">
 
 <head>
@@ -66,16 +60,6 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <!-- <li class="nav-item ">
-                <a class="nav-link" href="compete.html">Compete
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li> -->
-            <!-- <li class="nav-item ">
-                <a class="nav-link" href="contact.html">Contact
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li> -->
           </ul>
         </div>
       </nav>
@@ -93,9 +77,8 @@
             <div class="col-md-5">
               <div class="fh5co_hover_news_img">
                 <div class="fh5co_news_img">
-                  <img src="images/blog-post.jpg" alt="" />
+                  <div class="blank"></div>
                 </div>
-                <div></div>
               </div>
             </div>
             <div class="col-md-7 animate-box">
@@ -117,12 +100,11 @@
             <div class="col-md-5">
               <div class="fh5co_hover_news_img">
                 <div class="fh5co_news_img">
-                  <img src="images/blog-post.jpg" alt="" />
+                  <div class="blank"></div>
                 </div>
-                <div></div>
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 animate-box">
               <a href="single-news.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
                 <a href="single-news.html" class="d-block fh5co_small_post_heading">
@@ -141,12 +123,11 @@
             <div class="col-md-5">
               <div class="fh5co_hover_news_img">
                 <div class="fh5co_news_img">
-                  <img src="images/blog-post.jpg" alt="" />
+                  <div class="blank"></div>
                 </div>
-                <div></div>
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 animate-box">
               <a href="single-news.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
                 <a href="single-news.html" class="d-block fh5co_small_post_heading">
@@ -164,12 +145,11 @@
             <div class="col-md-5">
               <div class="fh5co_hover_news_img">
                 <div class="fh5co_news_img">
-                  <img src="images/blog-post.jpg" alt="" />
+                  <div class="blank"></div>
                 </div>
-                <div></div>
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 animate-box">
               <a href="single-news.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
               <div>
                 <a href="single-news.html" class="d-block fh5co_small_post_heading">
@@ -185,28 +165,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-          <!-- <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Tags</div>
-          </div>
-          <div class="clearfix"></div>
-          <div class="fh5co_tags_all">
-            <a href="#" class="fh5co_tagg">Business</a>
-            <a href="#" class="fh5co_tagg">Technology</a>
-            <a href="#" class="fh5co_tagg">Sport</a>
-            <a href="#" class="fh5co_tagg">Art</a>
-            <a href="#" class="fh5co_tagg">Lifestyle</a>
-            <a href="#" class="fh5co_tagg">Three</a>
-            <a href="#" class="fh5co_tagg">Photography</a>
-            <a href="#" class="fh5co_tagg">Lifestyle</a>
-            <a href="#" class="fh5co_tagg">Art</a>
-            <a href="#" class="fh5co_tagg">Education</a>
-            <a href="#" class="fh5co_tagg">Social</a>
-            <a href="#" class="fh5co_tagg">Three</a>
-          </div> -->
-
+        <div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
           <div class="animate-box right-rail" data-animate-effect="fadeInRight">
-            <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
+            <img src="images/sponsor-tall.png" class="img-responsive" />
           </div>
           <div>
             <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Most Popular</div>
@@ -268,7 +229,7 @@
         <div class="item px-2">
           <div class="fh5co_hover_news_img">
             <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
+              <div class="blank"></div>
             </div>
             <div>
               <a href="single-news.html" class="d-block fh5co_small_post_heading">
@@ -282,7 +243,7 @@
         <div class="item px-2">
           <div class="fh5co_hover_news_img">
             <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
+              <div class="blank"></div>
             </div>
             <div>
               <a href="single-news.html" class="d-block fh5co_small_post_heading">
@@ -296,7 +257,7 @@
         <div class="item px-2">
           <div class="fh5co_hover_news_img">
             <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
+              <div class="blank"></div>
             </div>
             <div>
               <a href="single-news.html" class="d-block fh5co_small_post_heading">
@@ -310,7 +271,7 @@
         <div class="item px-2">
           <div class="fh5co_hover_news_img">
             <div class="fh5co_news_img">
-              <img src="images/39-324x235.jpg" alt="" />
+              <div class="blank"></div>
             </div>
             <div>
               <a href="single-news.html" class="d-block fh5co_small_post_heading">
@@ -332,13 +293,6 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-6">
-            <!-- <div class="text-center d-inline-block">
-                <a class="fh5co_display_table">
-                  <div class="fh5co_verticle_middle">
-                    <i class="fa fa-search"></i>
-                  </div>
-                </a>
-              </div> -->
             <div class="text-center d-inline-block">
               <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
                 <div class="fh5co_verticle_middle">
