--- a/single-news.html
+++ b/single-news.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
-<!--
-	24 News by FreeHTML5.co
-	Twitter: https://twitter.com/fh5co
-	Facebook: https://fb.com/fh5co
-	URL: https://freehtml5.co
--->
 <html lang="en" class="no-js">
 
 <head>
@@ -26,190 +20,104 @@
   <script src="js/modernizr-3.5.0.min.js"></script>
 </head>
 
-<body class="single">
-  <!-- <div class="container-fluid">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-3 fh5co_padding_menu">
+<body>
+  <div class="single">
+
+    <div class="container-fluid fh5co_padd_mediya padding_786">
+      <div class="container padding_786">
+        <nav class="navbar navbar-toggleable-md navbar-light ">
+          <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa fa-bars"></span>
+          </button>
           <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
-        </div>
-        <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-search"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-linkedin"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-google-plus"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-twitter"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-facebook"></i>
-              </div>
-            </a>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <div class="container-fluid fh5co_padd_mediya padding_786">
-    <div class="container padding_786">
-      <nav class="navbar navbar-toggleable-md navbar-light ">
-        <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="fa fa-bars"></span>
-        </button>
-        <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
-        <a class="navbar-brand" href="#">
-          <img src="images/wsoe-logo.png" alt="img" class="mobile_logo_width" />
-        </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="news.html">Blog
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="events.html">Events
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="videos.html">Latest Videos
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="search.html">
-                <i class="fa fa-search"></i>
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <!-- <li class="nav-item ">
-                      <a class="nav-link" href="compete.html">Compete
-                        <span class="sr-only">(current)</span>
-                      </a>
-                    </li> -->
-            <!-- <li class="nav-item ">
-                      <a class="nav-link" href="contact.html">Contact
-                        <span class="sr-only">(current)</span>
-                      </a>
-                    </li> -->
-          </ul>
-        </div>
-      </nav>
-    </div>
-  </div>
-
-  <div class="container padding">
-    <div class="row animate-box">
-      <div class="col-md-9 col-sm-12" style="margin-top: 15px">
-
-        <!-- <div class="container-fluid text-center animate-box">
-          <img class="img-fluid" style="margin: 30px 0px 60px 0px" src="images/ad.jpg" />
-        </div> -->
-
-        <!-- <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">
-          <a href="videos.html"> Latest Videos
-            <span class="sr-only">(current)</span>
+          <a class="navbar-brand" href="#">
+            <img src="images/wsoe-logo.png" alt="img" class="mobile_logo_width" />
           </a>
-        </div> -->
-
-        <div class="row no-gutters" style="margin-left: 15px; margin-top: 15px">
-          <ul class="list-unstyled">
-            <li>
-              <img src="images/feat-content.jpg" alt="" class="img-fluid">
-            </li>
-            <li class="d-inline-block" style="font-size: 16px; margin-right: 15px">
-              <p style="font-weight: 500; font-size: 28px; margin-top: 8px">Title Lorum Ipsum Dolet.</p>
-            </li>
-            <li class="d-inline-block pull-right" style="font-size: 16px; margin-left: 30px; margin-top: 15px; color: #9d9d9d">
-              <i class="fa fa-twitter fa-hover"></i>
-            </li>
-            <li class="d-inline-block pull-right" style="font-size: 16px; margin-left: 30px; margin-top: 15px; color: #9d9d9d">
-              <i class="fa fa-facebook fa-hover"></i>
-            </li>
-            <li class="d-inline-block pull-right" style="font-size: 16px; margin-left: 30px; margin-top: 15px; color: #9d9d9d">
-              <i class="fa fa-envelope fa-hover"></i>
-            </li>
-            <li style="margin-top: -15px">
-              <p style="font-weight: 500; font-size: 16px; margin-top: 8px">By: Sam Smith</p>
-              <p style="font-weight: 300; font-size: 14px; margin-top: -20px">Oct 02, 2018</p>
-            </li>
-          </ul>
-        </div>
-
-        <div class="col-md-9 animate-box">
-          <div class="fh5co_consectetur">
-            <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-              ad minim veniam, quis nostrud exercitation.</p>
-            <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-              ad minim veniam, quis nostrud exercitation.</p>
-            <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-              ad minim veniam, quis nostrud exercitation.</p>
-            <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-              ad minim veniam, quis nostrud exercitation.</p>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item ">
+                <a class="nav-link" href="index.html">Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="news.html">Blog
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="events.html">Events
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="videos.html">Latest Videos
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="search.html">
+                  <i class="fa fa-search"></i>
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+            </ul>
           </div>
-        </div>
-
-        <div class="row mx-0" style="margin-bottom: 60px">
-          <div class="col-12 text-center pb-4 pt-4">
-            <a href="#" class="btn_mange_pagging">
-              <i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
-            <a href="#" class="btn_mange_pagging">Next
-              <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
-          </div>
-        </div>
-
+        </nav>
       </div>
+    </div>
 
-      <div class="col-md-3 col-sm-12 right-rail" style="margin-top: 30px;">
+    <div class="container">
+      <div class="row animate-box">
+       
+        <div class="col-md-8 col-sm-12 pt-4 pb-4">
+            <div class="fh5co_news_img">
+                <div class="blank"></div>
+              </div>
+            <ul class="list-unstyled">
+              <li class="d-inline-block" style="font-size: 16px; margin-right: 15px">
+                <p style="font-weight: 500; font-size: 28px; margin-top: 8px">Title Lorum Ipsum Dolet.</p>
+              </li>
+              <li class="d-inline-block pull-right" style="font-size: 16px; margin-left: 30px; margin-top: 15px; color: #9d9d9d">
+                <i class="fa fa-twitter fa-hover"></i>
+              </li>
+              <li class="d-inline-block pull-right" style="font-size: 16px; margin-left: 30px; margin-top: 15px; color: #9d9d9d">
+                <i class="fa fa-facebook fa-hover"></i>
+              </li>
+              <li class="d-inline-block pull-right" style="font-size: 16px; margin-left: 30px; margin-top: 15px; color: #9d9d9d">
+                <i class="fa fa-envelope fa-hover"></i>
+              </li>
+              <li style="margin-top: -15px">
+                <p style="font-weight: 500; font-size: 16px; margin-top: 8px">By: Sam Smith</p>
+                <p style="font-weight: 300; font-size: 14px; margin-top: -20px">Oct 02, 2018</p>
+              </li>
+            </ul>
+            <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation.
+            Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation.</p>
+            <p>Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation.
+            Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation.</p>
+          </div>
+     
+        <!-- COL-MD-4 RIGHT-RAIL START -->
+        <div class="col-md-4 animate-box right-rail pt-4" data-animate-effect="fadeInRight">
 
-        <div class="animate-box" data-animate-effect="fadeInLeft">
-          <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
-        </div>
+          <img src="images/sponsor-tall.png" class="img-responsive" />
 
-
-        <div class="animate-box" data-animate-effect="fadeInLeft">
           <hr class="short hr-short-margin">
-          <img src="images/twitter.png" class="img-responsive" style="width: 300px" />
-        </div>
+          <img src="images/twitter.png" class="img-responsive" />
 
-        <div>
           <hr class="short hr-short-margin">
           <img src="images/fb.jpg" style="margin-bottom: 60px">
+
         </div>
+        <!-- COL-MD-4 RIGHT-RAIL END -->
 
       </div>
-
     </div>
   </div>
 
@@ -220,13 +128,6 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <!-- <div class="text-center d-inline-block">
-                <a class="fh5co_display_table">
-                  <div class="fh5co_verticle_middle">
-                    <i class="fa fa-search"></i>
-                  </div>
-                </a>
-              </div> -->
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
