--- a/terms.html
+++ b/terms.html
@@ -26,136 +26,78 @@
   <script src="js/modernizr-3.5.0.min.js"></script>
 </head>
 
-<body class="single">
-  <!-- <div class="container-fluid">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-3 fh5co_padding_menu">
+<body>
+  <div class="single">
+    <div class="container-fluid fh5co_padd_mediya padding_786">
+      <div class="container padding_786">
+        <nav class="navbar navbar-toggleable-md navbar-light ">
+          <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa fa-bars"></span>
+          </button>
           <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
-        </div>
-        <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-search"></i>
-              </div>
-            </a>
+          <a class="navbar-brand" href="#">
+            <img src="images/wsoe-logo.png" alt="img" class="mobile_logo_width" />
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item ">
+                <a class="nav-link" href="index.html">Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="news.html">Blog
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="events.html">Events
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="videos.html">Latest Videos
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="search.html">
+                  <i class="fa fa-search"></i>
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+            </ul>
           </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-linkedin"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-google-plus"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-twitter"></i>
-              </div>
-            </a>
-          </div>
-          <div class="text-center d-inline-block">
-            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
-              <div class="fh5co_verticle_middle">
-                <i class="fa fa-facebook"></i>
-              </div>
-            </a>
-          </div>
-          <div class="clearfix"></div>
-        </div>
+        </nav>
       </div>
     </div>
-  </div> -->
-  <div class="container-fluid fh5co_padd_mediya padding_786">
-    <div class="container padding_786">
-      <nav class="navbar navbar-toggleable-md navbar-light ">
-        <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="fa fa-bars"></span>
-        </button>
-        <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
-        <a class="navbar-brand" href="#">
-          <img src="images/wsoe-logo.png" alt="img" class="mobile_logo_width" />
-        </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="news.html">Blog
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="events.html">Events
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="videos.html">Latest Videos
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="search.html">
-                <i class="fa fa-search"></i>
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <!-- <li class="nav-item ">
-              <a class="nav-link" href="compete.html">Compete
-                <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
-            <!-- <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Contact
-                <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
-          </ul>
-        </div>
-      </nav>
-    </div>
-  </div>
 
-  <div class="container padding">
-    <div class="row animate-box">
-      <div class="col-md-9 col-sm-12">
-
-        <div class="col-12 col-md-12" style="padding-top: 60px; padding-bottom: 60px">
-          <h1>Terms of Use</h1>
+    <div class="container">
+      <div class="row animate-box">
+        <div class="col-md-8 col-sm-12 pt-4 pb-4">
+          <h1>Terms</h1>
           <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
             eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
             et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
             eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
             liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
             Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-          <h2>1. ELIGIBILITY</h2>
+          <h4>1. ELIGIBILITY</h4>
           <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
             eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
             et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
             eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
             liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
             Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-          <h2>2. ADDITIONAL TERMS</h2>
+          <h4>2. ADDITIONAL TERMS</h4>
           <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
             eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
             et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
             eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
             liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
             Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-          <h2>3. PASSWORD AND ACCOUNT SECURITY</h2>
+          <h4>3. PASSWORD AND ACCOUNT SECURITY</h4>
           <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
             eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
             et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
@@ -164,7 +106,6 @@
             Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
         </div>
       </div>
-
     </div>
   </div>
 
@@ -175,13 +116,6 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-6">
-          <!-- <div class="text-center d-inline-block">
-                <a class="fh5co_display_table">
-                  <div class="fh5co_verticle_middle">
-                    <i class="fa fa-search"></i>
-                  </div>
-                </a>
-              </div> -->
           <div class="text-center d-inline-block">
             <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
               <div class="fh5co_verticle_middle">
