--- a/contact.html
+++ b/contact.html
@@ -67,44 +67,37 @@
       </div>
     </div>
 
-    <div class="container-fluid">
-      <div class="container pb-4 pt-4">
-        <div class="row">
-
-          <div class="col-md-8 col-sm-12">
-            <div class="container-fluid mb-4">
-              <div class="container">
-                <div class="col-12 text-center contact_margin_svnit">
-                  <div class="text-center fh5co_heading py-2">Sign Up for more information!</div>
+    <div class="container pb-4 pt-4">
+      <div class="row">
+        <div class="col-md-8 col-sm-12">
+          <h1 class="pb-4">Contact</h1>
+          <div class="fh5co_heading py-2">Sign Up for more information!</div>
+          <div class="row">
+            <div class="col-12 col-md-12">
+              <form class="row" id="fh5co_contact_form">
+                <div class="col-8 py-3">
+                  <input type="text" class="form-control fh5co_contact_text_box" placeholder="E-mail" />
                 </div>
-                <div class="row">
-                  <div class="col-12 col-md-12">
-                    <form class="row" id="fh5co_contact_form">
-                      <div class="col-12 py-3">
-                        <input type="text" class="form-control fh5co_contact_text_box" placeholder="E-mail" />
-                      </div>
-                      <div class="col-12 py-3 text-center">
-                        <a href="#" class="btn contact_btn">Sign Up</a>
-                      </div>
-                    </form>
-                  </div>
+                <div class="col-12 py-3">
+                  <a href="#" class="btn contact_btn">Sign Up</a>
                 </div>
-              </div>
+              </form>
             </div>
           </div>
+        </div>
 
-          <div class="col-md-4 col-sm-12 pb-4 pt-4">
-            <p>
-              is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat
-              interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
-            </p>
-            <p>Contact
-              <a href="mailto:Richard@espgaming.com"> Richard Blankenship</a>
-            </p>
-          </div>
+        <div class="col-md-4 col-sm-12 pb-4 pt-4">
+          <p>
+            is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat
+            interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
+          </p>
+          <p>Contact
+            <a href="mailto:Richard@espgaming.com"> Richard Blankenship</a>
+          </p>
         </div>
       </div>
     </div>
+
   </div>
 
   <div class="container-fluid fh5co_footer_right_reserved">
