--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
       <div class="container pb-4 pt-4">
         <div class="row">
           <div class="col-md-8">
-            <h1>Our Team</h1>
+            <h1 class="pb-4">Our Team</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
               pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie sit amet ut elit.
               Nulla accumsan nisl sapien, eget tristique nunc condimentum ac. Nam interdum tortor.Lorem ipsum dolor sit amet,
