--- a/sponsors.html
+++ b/sponsors.html
@@ -77,6 +77,7 @@
       <div class="row animate-box">
         <div class="col-md-8 col-sm-12 pt-4 pb-4">
           <div class="col-12 col-md-12">
+            <h1 class="pb-4">Sponsors</h1>
             <img src="images/user-circle.svg" style="height: 50px; width: 50px; margin-bottom: 20px">
             <span style="font-size: 25px; vertical-align: middle; margin-left: 10px">Sponsor 1</span>
             <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
