July 2nd Commit - Contact and PR pages

--- a/ppa/about.html
+++ b/ppa/about.html
@@ -78,27 +78,25 @@
 
     <!-- FEATURED CONTENT START -->
     <div class="container">
-      <div class="row">
+      <div class="row animate-box">
 
         <!-- COL-MD-8 START -->
         <div class="col-12 col-md-8 pt-4 Reserved">
           <div class="container-fluid pb-4 padding">
-            <div class="row animate-box">
-              <h1>About</h1>
-              <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
-                sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
-                vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
-                Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro
-                corrumpit liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis
-                definitiones. Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-              <hr class="short" style="margin-left: 0">
-              <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
-                sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
-                vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
-                Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro
-                corrumpit liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis
-                definitiones. Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-            </div>
+            <h1>About</h1>
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+            <hr class="short" style="margin-left: 0">
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
           </div>
         </div>
         <!-- COL-MD-8 END -->
@@ -160,7 +158,7 @@
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
             <li>
-              <!-- <a href="faq.html" class="footer_last_part_menu">FAQ</a> -->
+              <a href="pr.html" class="footer_last_part_menu">Press Releases</a>
             </li>
           </ul>
         </div>
@@ -174,6 +172,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="contact.html" class="footer_last_part_menu">Contact Us</a>
             </li>
           </ul>
         </div>
