--- a/ppa/contact.html
+++ b/ppa/contact.html
@@ -30,33 +30,32 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars"></span>
           </button>
-          <img src="images/ppa_logo.jpg" alt="img" class="fh5co_logo_width" />
+          <img src="images/PKA-Brand_Logo-Flat.svg" alt="img" class="fh5co_logo_width" />
           <a class="navbar-brand" href="index.html">
-            <img src="images/ppa_logo_xsmall.png" alt="img" class="mobile_logo_width" />
+            <img src="images/PKA-Brand_Logo-Flat.svg" alt="img" class="mobile_logo_width" />
           </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item ">
-                <a class="nav-link" href="index.html">Take Action
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="news.html">News
+                <a class="nav-link" href="about.html">About
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="donate.html">Donate
+                <a class="nav-link" href="terms.html">Terms
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-              <!-- <li class="nav-item ">
-                <a class="nav-link" href="search.html">
-                  <i class="fa fa-search"></i>
+              <li class="nav-item ">
+                <a class="nav-link" href="privacy.html">Privacy
                   <span class="sr-only">(current)</span>
                 </a>
-              </li> -->
+              </li>
             </ul>
           </div>
         </nav>
@@ -79,25 +78,28 @@
 
     <!-- FEATURED CONTENT START -->
     <div class="container">
-      <div class="row">
+      <div class="row animate-box">
 
         <!-- COL-MD-8 START -->
         <div class="col-12 col-md-8 pt-4 Reserved">
           <div class="container-fluid pb-4 padding">
+            <h1 class="pb-4">Contact</h1>
+            <p>
+              is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat
+              interpretaris. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
+            </p>
+            <div class="fh5co_heading py-2">Sign Up for more information!</div>
             <div class="row">
-              <h2>Contact</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
-                pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie sit amet ut
-                elit. Nulla accumsan nisl sapien, eget tristique nunc condimentum ac. Nam interdum tortor.Lorem ipsum dolor
-                sit amet, consectetur adipiscing.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
-                pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie sit amet ut
-                elit. Nulla accumsan nisl sapien, eget tristique nunc condimentum ac. Nam interdum tortor.Lorem ipsum dolor
-                sit amet, consectetur adipiscing.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
-                pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie sit amet ut
-                elit. Nulla accumsan nisl sapien, eget tristique nunc condimentum ac. Nam interdum tortor.Lorem ipsum dolor
-                sit amet, consectetur adipiscing.</p>
+              <div class="col-12 col-md-12">
+                <form class="row" id="fh5co_contact_form">
+                  <div class="col-8 py-3">
+                    <input type="text" class="form-control fh5co_contact_text_box" placeholder="E-mail" />
+                  </div>
+                  <div class="col-12 py-3">
+                    <a href="#" class="btn contact_btn">Sign Up</a>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
@@ -160,7 +162,7 @@
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
             <li>
-              <a href="contact.html" class="footer_last_part_menu">Contact</a>
+              <a href="pr.html" class="footer_last_part_menu">Press Releases</a>
             </li>
           </ul>
         </div>
@@ -176,7 +178,7 @@
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
             </li>
             <li>
-              <a href="faq.html" class="footer_last_part_menu">FAQ</a>
+              <a href="contact.html" class="footer_last_part_menu">Contact Us</a>
             </li>
           </ul>
         </div>
