--- a/ppa/index.html
+++ b/ppa/index.html
@@ -264,7 +264,7 @@
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
             <li>
-              <!-- <a href="faq.html" class="footer_last_part_menu">FAQ</a> -->
+              <a href="pr.html" class="footer_last_part_menu">Press Releases</a>
             </li>
           </ul>
         </div>
@@ -278,6 +278,9 @@
             </li>
             <li>
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
+            </li>
+            <li>
+              <a href="contact.html" class="footer_last_part_menu">Contact Us</a>
             </li>
           </ul>
         </div>
