--- a/ppa/news.html
+++ b/ppa/news.html
@@ -146,7 +146,7 @@
               <a href="about.html" class="footer_last_part_menu">About</a>
             </li>
             <li>
-              <a href="contact.html" class="footer_last_part_menu">Contact</a>
+              <a href="pr.html" class="footer_last_part_menu">Press Releases</a>
             </li>
           </ul>
         </div>
@@ -162,7 +162,7 @@
               <a href="privacy.html" class="footer_last_part_menu">Privacy</a>
             </li>
             <li>
-              <a href="sponsors.html" class="footer_last_part_menu">FAQ</a>
+              <a href="contact.html" class="footer_last_part_menu">Contact Us</a>
             </li>
           </ul>
         </div>
