--- a/ppa/pr.html
+++ b/ppa/pr.html
@@ -35,28 +35,29 @@
             <img src="images/PKA-Brand_Logo-Flat.svg" alt="img" class="mobile_logo_width" />
           </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <!-- <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home
+                <a class="nav-link" href="index.html">Take Action
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="about.html">About
+                <a class="nav-link" href="news.html">News
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="terms.html">Terms
+                <a class="nav-link" href="donate.html">Donate
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="privacy.html">Privacy
+                <a class="nav-link" href="search.html">
+                  <i class="fa fa-search"></i>
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </nav>
       </div>
@@ -76,32 +77,41 @@
     </div>
     <!-- HERO END -->
 
+    <!-- FEATURED CONTENT START -->
     <div class="container">
       <div class="row animate-box">
-        <div class="col-md-8 col-sm-12 pt-4 pb-4">
-          <h1>Terms and Conditions</h1>
-          <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
-            eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
-            et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
-            eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
-            liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
-            Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-          <h4>1. Lorum</h4>
-          <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
-            eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
-            et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
-            eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
-            liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
-            Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
-          <h4>2. Ipsum</h4>
-          <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis, sed
-            eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis vel
-            et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri. Id
-            eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
-            liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
-            Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+
+        <!-- COL-MD-8 START -->
+        <div class="col-12 col-md-8 pt-4 Reserved">
+          <div class="container-fluid pb-4 padding">
+            <h2>PRESS RELEASES</h2>
+            <h5 style="margin: 15px auto; font-weight: 300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
+              pulvinar posuere.</h5>
+            <p>May 24, 2018</p>
+            <h5 style="margin: 15px auto; font-weight: 300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
+              pulvinar posuere.</h5>
+            <p>May 24, 2018</p>
+            <h5 style="margin: 15px auto; font-weight: 300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
+              pulvinar posuere.</h5>
+            <p>May 24, 2018</p>
+            <h5 style="margin: 15px auto; font-weight: 300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
+              pulvinar posuere.</h5>
+            <p>May 24, 2018</p>
+            <h5 style="margin: 15px auto; font-weight: 300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
+              pulvinar posuere.</h5>
+            <p>May 24, 2018</p>
+            <div class="view-all-btn">VIEW MORE</div>
+          </div>
         </div>
+        <!-- COL-MD-8 END -->
+
+        <!-- COL-MD-4 RIGHT-RAIL START -->
+        <div class="col-md-4 right-rail pt-4">
+
+        </div>
+        <!-- COL-MD-4 RIGHT-RAIL END -->
       </div>
+      <!-- ROW END -->
     </div>
     <!-- FEATURED CONTENT END -->
   </div>
