--- a/ppa/pr.html
+++ b/ppa/pr.html
@@ -35,29 +35,28 @@
             <img src="images/PKA-Brand_Logo-Flat.svg" alt="img" class="mobile_logo_width" />
           </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Take Action
+                <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="news.html">News
+                <a class="nav-link" href="about.html">About
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="donate.html">Donate
+                <a class="nav-link" href="terms.html">Terms
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="search.html">
-                  <i class="fa fa-search"></i>
+                <a class="nav-link" href="privacy.html">Privacy
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-            </ul> -->
+            </ul>
           </div>
         </nav>
       </div>
@@ -212,7 +211,6 @@
     if (!navigator.userAgent.match(/Android|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i)) {
       $(window).stellar();
     }
-
   </script>
 
 </body>
